--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,13 +17,19 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#">mis<strong>finanzas</strong></a>
+        <a class="navbar-brand" href=<%= root_path %>>i<strong>Finances</strong></a>
       </div>
 
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
-          <li class="active"><a href="#">Gastos <span class="sr-only">(current)</span></a></li>
+          <% if user_signed_in? %>            
+            <li class="active"><a href=<%= user_expenses_path(current_user.id) %>>mi gasto <span class="sr-only">(current)</span></a></li>
+            <li><%= link_to("Salir", destroy_user_session_path, method: "delete") %></li>
+          <% else %>
+            <li><%= link_to("Create an account", new_user_registration_path) %></li>
+            <li><%= link_to("Log In", new_user_session_path) %></li>
+          <% end %>
         </ul>
       </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
