--- a/app/views/index/index.html.erb
+++ b/app/views/index/index.html.erb
@@ -1,3 +1,16 @@
 <% unless user_signed_in? %>  
   <% controller.redirect_to(new_user_session_path) %>
 <% end %>
+
+<table>
+  <thead>
+    <tr>
+      <td></td>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td></td>
+    </tr>
+  </tbody>
+</table>
